--- a/arch/arm/configs/skatter_d2_defconfig
+++ b/arch/arm/configs/skatter_d2_defconfig
@@ -18,6 +18,7 @@ CONFIG_MSM_RUN_QUEUE_STATS_BE_CONSERVATIVE=y
 CONFIG_STATE_NOTIFIER=y
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_QUICK_WAKEUP=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 # IO Schedulers
 CONFIG_IOSCHED_NOOP=y
